--- a/perfil.html
+++ b/perfil.html
@@ -83,15 +83,15 @@
 
         <div class="box-container">
     
-            <div class="box">
-                <h3>liks rápidos</h3>
-                <a href="#"> <i class="fas fa-chevron-right"></i> home </a>
-                <a href="#"> <i class="fas fa-chevron-right"></i> serviços </a>
-                <a href="#"> <i class="fas fa-chevron-right"></i> sobre nós </a>
-                <a href="#"> <i class="fas fa-chevron-right"></i> farmacêuticos </a>
-                <a href="#"> <i class="fas fa-chevron-right"></i> contatos </a>
-                <a href="#"> <i class="fas fa-chevron-right"></i> blog </a>
-            </div>
+        <div class="box">
+            <h3>liks rápidos</h3>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Link 1 </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Link 2 </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Link 3 </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Link 4 </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Link 5 </a>
+            <a href="#"> <i class="fas fa-chevron-right"></i> Link 6 </a>
+        </div>
     
             <div class="box">
                 <h3>Nossos serviços</h3>
